--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix"
   },
   "dependencies": {
     "@types/node": "20.4.5",
@@ -21,6 +22,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@pandacss/dev": "^0.9.0"
+    "@pandacss/dev": "^0.9.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0"
   }
 }
