--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "next": "^13.4.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.6"
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "@pandacss/dev": "^0.9.0",
+    "@pandacss/dev": "^0.15.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0"
   }
 }
